--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ form{
     <div class="container d-flex align-items-center">
  
       <h6  class="logo mr-auto"><a href="index.html">Mr. Hanifi  
-                     <img class="anima" class="main-logo" class="anima" src="/images/mep.png" alt="logo">
+                     <img class="anima" class="main-logo" class="anima" src="./images/mep.png" alt="">
                     </a></h6>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
